--- a/MVCBookshelf/Views/Home/Index.cshtml
+++ b/MVCBookshelf/Views/Home/Index.cshtml
@@ -3,3 +3,9 @@
 }
 
 <h2 id="index-title">Welcome to Julie's Awesome BookShelf</h2>
+<a id="enter" href="~/Books/Index">Enter</a>
+
+
+<p id="splash">
+    <img id="splash-img" src="~/Content/images/FB_IMG_1520366713544.jpg" />
+</p>
