--- a/MVCBookshelf/Views/Shared/_Layout.cshtml
+++ b/MVCBookshelf/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Julie's First Bookshelf Application</p>
         </footer>
     </div>
 
